@@ -1,5 +1,5 @@
 ;;;;;
-;;;;; $Id: edit-text.el,v 35.8 1991-10-08 16:10:42 linus Exp $
+;;;;; $Id: edit-text.el,v 35.9 1991-10-23 18:26:04 linus Exp $
 ;;;;; Copyright (C) 1991  Lysator Academic Computer Association.
 ;;;;;
 ;;;;; This file is part of the LysKOM server.
@@ -34,14 +34,11 @@
 
 (setq lyskom-clientversion-long 
       (concat lyskom-clientversion-long
-	      "$Id: edit-text.el,v 35.8 1991-10-08 16:10:42 linus Exp $\n"))
+	      "$Id: edit-text.el,v 35.9 1991-10-23 18:26:04 linus Exp $\n"))
 
 
 ;;;; ================================================================
 
-
-(defvar lyskom-edit-mode-map nil
-  "Mode map for LysKOM edit.")
 
 (defvar lyskom-edit-mode-mode-map nil
   "Mode map for the mode LysKOM edites in.")
@@ -220,43 +217,6 @@ First element is a type-tag."
 ;;; ================================================================
 ;;;                   lyskom-edit-mode
 
-;;; Set the keymap for lyskom-edit-mode
-
-(if lyskom-edit-mode-map
-    nil
-  (setq lyskom-edit-mode-map (make-sparse-keymap))
-  (fset 'lyskom-edit-prefix (make-keymap))
-  (fset 'lyskom-edit-review-prefix (make-keymap))
-  (fset 'lyskom-edit-insert-prefix (make-keymap))
-  (define-key lyskom-edit-mode-map "\C-c"	'lyskom-edit-prefix)
-  (define-key lyskom-edit-mode-map "\C-c?"	'lyskom-help)
-  (define-key lyskom-edit-mode-map "\C-c}"	'lyskom-edit-review-prefix)
-  (define-key lyskom-edit-mode-map "\C-c]"	'lyskom-edit-review-prefix)
-  (define-key lyskom-edit-mode-map "\C-ci"	'lyskom-edit-insert-prefix)
-  (define-key lyskom-edit-mode-map "\C-c\C-c"	'kom-edit-send)
-  (define-key lyskom-edit-mode-map "\C-ck"	'kom-edit-quit)
-  (define-key lyskom-edit-mode-map "\C-c\C-k"	'kom-edit-quit)
-  (define-key lyskom-edit-mode-map "\C-c}?"	'lyskom-help)
-  (define-key lyskom-edit-mode-map "\C-c}k"	'kom-edit-show-commented)
-  (define-key lyskom-edit-mode-map "\C-ci?"	'lyskom-help)
-  (define-key lyskom-edit-mode-map "\C-cik"	'kom-edit-insert-commented)
-  (define-key lyskom-edit-mode-map "\C-ci1"	'kom-edit-insert-digit-text)
-  (define-key lyskom-edit-mode-map "\C-ci2"	'kom-edit-insert-digit-text)
-  (define-key lyskom-edit-mode-map "\C-ci3"	'kom-edit-insert-digit-text)
-  (define-key lyskom-edit-mode-map "\C-ci4"	'kom-edit-insert-digit-text)
-  (define-key lyskom-edit-mode-map "\C-ci5"	'kom-edit-insert-digit-text)
-  (define-key lyskom-edit-mode-map "\C-ci6"	'kom-edit-insert-digit-text)
-  (define-key lyskom-edit-mode-map "\C-ci7"	'kom-edit-insert-digit-text)
-  (define-key lyskom-edit-mode-map "\C-ci8"	'kom-edit-insert-digit-text)
-  (define-key lyskom-edit-mode-map "\C-ci9"	'kom-edit-insert-digit-text)
-  (define-key lyskom-edit-mode-map "\C-ci "	'kom-edit-insert-text)
-  (fset 'lyskom-edit-add-prefix (make-keymap))
-  (define-key lyskom-edit-mode-map "\C-ca" 'lyskom-edit-add-prefix)
-  (define-key lyskom-edit-mode-map "\C-cam" 'kom-edit-add-recipient)
-  (define-key lyskom-edit-mode-map "\C-cak" 'kom-edit-add-copy)
-  (define-key lyskom-edit-mode-map "\C-ca?" 'lyskom-help))
-
-  
 (defun lyskom-edit-mode ()
   "\\<lyskom-edit-mode-map>Mode for editing texts for LysKOM.
 Commands:
